[tool.poetry]
name = "task-plan-ai"
version = "0.1.0"
description = ""
authors = ["Yutaro Omote <yutaroomote@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "^0.4.3"
langchain = {extras = ["openai"], version = "^0.3.25"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
